# WebRTCAudio

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/comone/webrtcaudio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/aecm/: aecm_core.cc  aecm_core.h  aecm_core_c.cc  echo_control_mobile.cc
app/src/main/cpp/agc/: analog_agc.c  analog_agc.h  digital_agc.c  digital_agc.h
app/src/main/cpp/common_audio/: complex_fft.c  delay_estimator.cc  delay_estimator_internal.h  delay_estimator_wrapper.cc  division_operations.c  min_max_operations.c  real_fft.c  ring_buffer.c  safe_conversions.h  signal_processing_library.h  spl_sqrt.c  sqrt_of_one_minus_x_squared.c
app/src/main/cpp/ns/: noise_suppression.c  noise_suppression_x.c  ns_core.c  ns_core.h  nsx_core.c  nsx_core.h  nsx_core_c.c
app/src/main/java/com/comone/webrtcaudio/: MainActivity.kt  WebRTCAudioUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: xftest.pcm
app/src/main/res/values/: strings.xml
app/src/test/java/com/comone/webrtcaudio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
